--- a/Vet/package.json
+++ b/Vet/package.json
@@ -10,8 +10,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.2",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.21.0",
+    "firebase": "^8.1.1",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-awesome-alerts": "^1.4.2",
+    "react-native-calendar-picker": "^7.0.3",
+    "react-native-dropdown-picker": "^3.7.1",
+    "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^2.3.4",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-responsive-fontsize": "^0.5.0",
+    "react-native-responsive-screen": "^1.4.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.0",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.8",
